Corrections email de validation et creditCard

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -16,7 +16,10 @@
       </div>
     </div>
     <div class="bloc-information-horaire col-12">
+      <!--
+      // Todo a remettre
        <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+      -->
        <ul>
         <li class="detail-ouverture"><i class="far fa-clock"></i> Horaires d'ouverture :</li>
         <li class="detail-horaires">Lundi : <span class="italic-horaire"> Fermer</span></li>
