--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.scss
@@ -1,4 +1,10 @@
 
+
+
+.hidden
+{
+  display: none;
+}
 .super-bloc-fiche-produit {
   background-color: var(--couleurBlancCreme);
   box-shadow: 4px 4px 6px 1px rgba(0, 0, 0, 0.30);
