Ajout des components pour l'affichage cote Buyer (pages_common)

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/welcome-merchant/welcome-merchant.component.html
@@ -8,7 +8,7 @@
             <img class="img-bonjour" src="/assets/img/profil/profil.png" alt="photo de l'utilisateur">
           </div>
           <div class="bloc-bonjour">
-            <h2>Bonjour Boulangerie Mathieu</h2>
+            <h2>Bonjour Big Fernand</h2>
             <p class="message-bonjour"><i class="fas fa-quote-left"></i> Bienvenue sur votre compte. Retrouvez toutes vos informations personnelles et vos préférences. <i class="fas fa-quote-right"></i>
             </p>
           </div>
