--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.scss
@@ -1,9 +1,16 @@
 
 
 
-
-
 /* bloc-affichage - Produit */
+.bloc-affichage {
+  width: 100%;
+  background-color: var(--couleurBlancCreme);
+  box-shadow: 10px 15px 20px 2px rgba(0,0,0,0.15);
+  padding-top: 40px;
+  padding-bottom: 70px;
+
+}
+
 .bloc-affichage-produit {
   margin-bottom: 140px;
   display: flex;
@@ -19,7 +26,6 @@ h4 {
   font-family: 'Ubuntu', sans-serif;
   font-size: 1.3em;
   font-weight: 600;
-  text-decoration: none;
   color: var(--couleurVerte);
   margin-top: 10px;
   margin-bottom: 15px;
@@ -48,8 +54,6 @@ h4 {
   max-height: 350px;
   object-fit: cover;
   box-shadow: 6px 6px 10px 1px rgba(0,0,0,0.08);
-  padding-top: 15px;
-  padding-bottom: 15px;
   position: relative;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -57,7 +61,7 @@ h4 {
 }
 
 .img:hover {
-  opacity: 0.92;
+  opacity: 0.85;
 
 }
 
@@ -88,29 +92,25 @@ figure:hover figcaption {
 }
 
 .note {
-  font-size: 1.3em;
   color: var(--couleurVerte);
   margin-top: 20px;
   text-align: center;
-  margin-top: -32%;
+  margin-top: -25%;
   position: relative;
   visibility: hidden
+
 }
+
 
 h5 {
   font-family: 'roboto', sans-serif;
   font-size: 1.3em;
   font-weight: 600;
-  text-decoration: none;
   color: var(--couleurNoir);
-  margin-top: 5px;
+  margin-top: 20px;
   margin-bottom: 10px;
   margin-left: 5%;
   margin-right: 5%;
-}
-
-a {
-  color: var(--couleurNoir);
 }
 
 .composition-affichage {
@@ -138,37 +138,12 @@ a {
   margin-right: 5%;
 }
 
-.Lieu-affichage {
-  margin-top: 20px;
-  margin-left: 50%;
-  transform: translate(-50%);
-}
-
-.liste-mois {
-  width: 450px;
-  height: 30px;
-  font-family: 'roboto', sans-serif;
-  font-size: 1em;
-  font-weight: 400;
-  color: var(--couleurNoir);
-  border: 1.5px solid var(--couleurNoir);
-  border-radius: 5px;
-  margin-bottom: 15px;
-  padding-left: 10px;
-  display: block;
-}
-
-select:focus {
-  background-color: var(--couleurVerte);
-  border: none;
-}
-
 .bloc-prix-affichage {
   display: flex;
   position: relative;
   background-color: var(--couleurGrisClair);
   bottom: -30px;
-  padding-top: 5px;
+  padding-top: 15px;
   padding-bottom: 15px;
 }
 
@@ -203,11 +178,7 @@ select:focus {
 
 .plus-moins {
   font-size: 1.2em;
-  margin-top: 0px;
-}
-
-.fa-plus-circle {
-  margin-right: 5px;
+  margin-top: 7px;
 }
 
 .bloc-panier {
@@ -267,18 +238,13 @@ select:focus {
   color: var(--couleurNoir);
   background-color: var(--couleurRougeIncorrect);
   padding: 5px 14px;
-
-}
-
-.prix-barre {
-  margin-left: 7px;
 }
 
 .trait {
   width: 70%;
   height: 1px;
   background-color: var(--couleurNoir);
-  margin-top: -15px;
+  margin-top: -12px;
   margin-left: 50%;
   transform: translate(-50%);
 }
