--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.html
@@ -1,4 +1,10 @@
 
+<section class="section-fiche-produit">
+  <div class="container">
+    <div class="row col-12">
+
+
+
 
 
 <form [formGroup]="form1" (submit)="onSubmit()" >
@@ -112,7 +118,7 @@
         </div>
 
         <div class="composition-produit">
-          <h5><i class="fas fa-caret-right"></i> Durée maximum maintient dans le panier </h5>
+          <h5><i class="fas fa-caret-right"></i> Durée maximum maintien dans le panier </h5>
           <hr>
           <p class="composition-affichage">
             <i class="fas fa-asterisk" ></i>
@@ -145,3 +151,10 @@
 </div>
 
 </form >
+
+
+
+
+    </div>
+  </div>
+</section>
