--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-product-template/add-product-template.component.scss
@@ -1,4 +1,17 @@
 
+/* SECTION/ Fiche-Produit */
+.section-fiche-produit {
+  background: rgba(161,161,161,1);
+  background: -moz-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(161,161,161,1)), color-stop(5%, rgba(161,161,161,1)), color-stop(94%, rgba(102,102,102,1)), color-stop(100%, rgba(102,102,102,1)));
+  background: -webkit-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -o-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: -ms-linear-gradient(-45deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  background: linear-gradient(135deg, rgba(161,161,161,1) 0%, rgba(161,161,161,1) 5%, rgba(102,102,102,1) 94%, rgba(102,102,102,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1a1a1', endColorstr='#666666', GradientType=1 );
+  padding-bottom: 40px;
+}
+
 
 
 .hidden
@@ -18,7 +31,7 @@
 
 .titre-produit {
   font-family: 'Ubuntu', sans-serif;
-  font-size: 1.5em;
+  font-size: 1.7em;
   font-weight: 600;
   color: var(--couleurNoir);
   margin-left: 110px;
@@ -78,7 +91,9 @@
   width: 600px;
   max-height: 350px;
   object-fit: cover;
-  box-shadow: 6px 6px 10px 1px rgba(0,0,0,0.08);
+  box-shadow: 6px 6px 10px 1px rgba(0, 0, 0, 0.08);
+  padding-top: 15px;
+  padding-bottom: 15px;
   position: relative;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
@@ -117,10 +132,11 @@ figure:hover figcaption {
 }
 
 .note {
+  font-size: 1.4em;
   color: var(--couleurVerte);
   margin-top: 20px;
   text-align: center;
-  margin-top: -25%;
+  margin-top: -32%;
   position: relative;
   visibility: hidden
 }
@@ -171,7 +187,6 @@ figure:hover figcaption {
   margin-bottom: 10px;
 }
 
-
 .liste-mois {
   width: 450px;
   height: 30px;
@@ -201,13 +216,11 @@ input[type=password]:focus {
   border: none;
 }
 
-
 input[type=checkbox] {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ms-appearance: none;
 }
-
 
 input[type=checkbox] {
   -border-radius: 4px;
@@ -258,7 +271,6 @@ input[type="checkbox"]:checked {
   padding-bottom: 10px;
 }
 
-
 .bouton-panier {
   width: 185px;
   font-family: sans-serif;
@@ -276,7 +288,6 @@ input[type="checkbox"]:checked {
   transition: all 0.2s ease-out;
   cursor: pointer;
 }
-
 
 .bouton-panier:hover {
   color: var(--couleurBlancCreme);
@@ -309,11 +320,15 @@ input[type="checkbox"]:checked {
   padding: 5px 14px;
 }
 
+.prix-barre {
+  margin-left: 7px;
+}
+
 .trait {
   width: 70%;
   height: 1px;
   background-color: var(--couleurNoir);
-  margin-top: -12px;
+  margin-top: -15px;
   margin-left: 50%;
   transform: translate(-50%);
 }
@@ -390,7 +405,8 @@ input[type="checkbox"]:checked {
 
 .bloc-composition-produit {
   background-color: var(--couleurGrisClair);
-  padding-top: 40px;
+  margin-top: 40px;
+  padding-bottom: 50px;
 }
 
 .composition-produit {
@@ -398,21 +414,27 @@ input[type="checkbox"]:checked {
   padding-right: 10%;
 }
 
+.fa-caret-right {
+  color: var(--couleurVerte);
+}
+
 h5 {
-  background-color: var(--couleurBlancCreme);
-  background-color: var(--couleurVerte);
-  border-bottom: 1px solid var(--couleurNoir);
+  font-family: 'roboto', sans-serif;
+  font-size: 1.2em;
+  font-style: italic;
+  font-weight: 600;
   padding-top: 5px;
   padding-bottom: 5px;
-  margin-right: 60%;
 }
 
 .titre-detail {
   font-family: 'roboto', sans-serif;
-  font-size: 1em;
+  font-size: 1.2em;
   font-weight: 600;
   text-align: center;
-  margin-bottom: 50px;
+  color: var(--couleurNoir);
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .composition-affichage {
