--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
@@ -10,14 +10,14 @@
     </div>
 
     <div class="img-vitrine col-6 no-gutters">
-      <a [routerLink]="'/commerceSheet/' + commerce.id"></a><img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}">
+      <img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}">
     </div>
 
     <div class="detail-commerce col-6">
 
       <div class="bloc-information-commerce col-12">
-        <h2 class="nom-commerce"><a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a></h2>
-        <p class="rue-commerce">{{commerce.address}}</p>
+        <h2 class="nom-commerce">{{commerce.name}} - {{commerce.uniqueIdName}}</h2>
+        <p class="rue-commerce">{{commerce.address.address}}, {{commerce.address.cityName}}</p>
         <div class="bloc-ouverture ">
           <a href=""><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
         </div>
