Details sur fiche et liste commerce

--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-list-merchant/commerce-list-merchant.component.html
@@ -12,7 +12,7 @@
 
         <app-commerce-merchant-view *ngFor="let c of commerces" [commerce]="c" ></app-commerce-merchant-view>
 
-
+        <!-- TODO bouton ajouter un nouveau commerce -->
   </div>
     </div>
   </div>
