--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
@@ -5,7 +5,7 @@
 <div class="row">
   <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces" *ngIf="commerce">
 
-    <div class="cercle-bookmark" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  [routerLink]="'/commerce/addOrUpdate/' + commerce.id" >
+    <div class="cercle-bookmark" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  [routerLink]="'/merchant/commerce/addOrUdapte/' + commerce.id" >
       <i class="fas fa-pencil-alt" ></i>
     </div>
 
