--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -4,9 +4,15 @@
 
 <div class="row">
   <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
+
+    <div class="cercle-bookmark" [routerLink]="'/merchant/commerce/addOrUpdate/' + commerce.id" >
+      <i class="fas fa-pencil-alt" ></i>
+    </div>
+
     <div class="bloc-vitrine col-6 no-gutters">
       <a [routerLink]="'/commerceSheet/' + commerce.id"><img class="img-vitrine" src="/assets/img/commerce/{{ commerce.pictureDescription }}" alt="image de {{ commerce.name }}"></a>
     </div>
+
   <div class="detail-commerce col-6">
     <div class="bloc-information-commerce col-12">
       <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a></h2>
