Gestion de l'ajout et modification de Commerce

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/commerce-view/commerce-view.component.html
@@ -24,19 +24,19 @@
       </div>
 
       <div class="bloc-information-horaire col-12">
-        <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
-        <!--
-        <ul>
-          <li class="detail-ouverture">Horaires d'ouverture :</li>
-          <li class="detail-horaires">Lundi: <span class="details-fermer">fermer</span></li>
-          <li class="detail-horaires">Mardi: <span class="italic-horaire">7h-19h</span></li>
-          <li class="detail-horaires">Mercredi: <span class="italic-horaire"> 7h-19h</span></li>
-          <li class="detail-horaires">Jeudi:<span class="italic-horaire"> 7h-19h</span></li>
-          <li class="detail-horaires">Vendredi: <span class="italic-horaire">7h-19h</span> </li>
-          <li class="detail-horaires">Samedi: <span class="italic-horaire"> 9h-16h30</span></li>
-          <li class="detail-horaires">Dimanche: <span class="italic-horaire">9h-12h</span></li>
-        </ul>
-        -->
+        <!-- <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+
+         <ul>
+           <li class="detail-ouverture">Horaires d'ouverture :</li>
+           <li class="detail-horaires">Lundi: <span class="details-fermer">fermer</span></li>
+           <li class="detail-horaires">Mardi: <span class="italic-horaire">7h-19h</span></li>
+           <li class="detail-horaires">Mercredi: <span class="italic-horaire"> 7h-19h</span></li>
+           <li class="detail-horaires">Jeudi:<span class="italic-horaire"> 7h-19h</span></li>
+           <li class="detail-horaires">Vendredi: <span class="italic-horaire">7h-19h</span> </li>
+           <li class="detail-horaires">Samedi: <span class="italic-horaire"> 9h-16h30</span></li>
+           <li class="detail-horaires">Dimanche: <span class="italic-horaire">9h-12h</span></li>
+         </ul>
+         -->
 
       </div>
     </div>
