--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-commerce/add-commerce.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-commerce/add-commerce.component.html
@@ -1,1 +1,53 @@
-<p>add-commerce works!</p>
+
+
+<!-- TODO si le css merde, ajouter les div de commerce-sheet -->
+
+<div class="row">
+
+  <form [formGroup]="form1" (submit)="onSubmit()" >
+
+  <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
+
+
+    <div class="img-vitrine col-6 no-gutters">
+      <img class="img-vitrine" src="/assets/img/commerce/{{form1.value.pictureDescription}}" alt="image du commerce">
+      <input formControlName="pictureDescription" name="pictureDescription" type="file" placeholder="Image du commerce"> <!-- Todo upload -->
+    </div>
+
+    <div class="detail-commerce col-6">
+
+      <div class="bloc-information-commerce col-12">
+        <h2 class="nom-commerce">- <i class="fas fa-asterisk" ></i><input formControlName="name" name="name" class="name" type="text" placeholder="Nom" required> <input formControlName="uniqueIdName" name="uniqueIdName" class="uniqueIdName" type="text" placeholder="Complément de nom" ></h2>
+        <span class="text-danger" *ngIf="controlName(); let message">{{message}}</span>
+
+        <p><i class="fas fa-asterisk" ></i><input formControlName="codeSiret" name="codeSiret" type="text" placeholder="numéro Siret" required></p>
+        <span class="text-danger" *ngIf="controlcodeSiret(); let message">{{message}}</span>
+
+        <p class="rue-commerce"><i class="fas fa-asterisk" ></i><input formControlName="Address" name="Address" type="text" placeholder="Adresse du commerce" required></p>
+        <span class="text-danger" *ngIf="controlAddress(); let message">{{message}}</span>
+
+        <div class="bloc-ouverture ">
+          <a href=""><div id ="bouton-ouverture" class="bouton-ouverture">{{ form1.value.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
+        </div>
+      </div>
+
+      <div class="bloc-information-horaire col-12">
+        <app-scheduler-week-txt [scheduler]="commerce.schedulerWeek" [schedulerType]="SchedulerWeekType.OPEN"></app-scheduler-week-txt>
+        <!--
+        <ul>
+          <li class="detail-ouverture">Horaires d'ouverture :</li>
+          <li class="detail-horaires">Lundi: <span class="details-fermer">fermer</span></li>
+          <li class="detail-horaires">Mardi: <span class="italic-horaire">7h-19h</span></li>
+          <li class="detail-horaires">Mercredi: <span class="italic-horaire"> 7h-19h</span></li>
+          <li class="detail-horaires">Jeudi:<span class="italic-horaire"> 7h-19h</span></li>
+          <li class="detail-horaires">Vendredi: <span class="italic-horaire">7h-19h</span> </li>
+          <li class="detail-horaires">Samedi: <span class="italic-horaire"> 9h-16h30</span></li>
+          <li class="detail-horaires">Dimanche: <span class="italic-horaire">9h-12h</span></li>
+        </ul>
+        -->
+
+      </div>
+    </div>
+  </div>
+  </form>
+</div>
