--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -16,7 +16,7 @@
   <div class="detail-commerce col-6">
     <div class="bloc-information-commerce col-12">
       <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a></h2>
-      <p class="rue-commerce">{{commerce.address.address}}, {{commerce.address.cityName}}</p>
+      <p class="rue-commerce"><!-- {{commerce.address.address}}, {{commerce.address.cityName}} --></p>
       <div class="bloc-ouverture ">
         <a href="#"><div id ="bouton-ouverture" class="bouton-ouverture">{{ commerce.isOpened ? 'OUVERT' : 'FERME' }}</div></a>
       </div>
