--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-view/product-template-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-view/product-template-view.component.html
@@ -11,7 +11,7 @@
       <i class="fas fa-bookmark"></i>
     </div>
 
-    <div class="cercle-bookmark" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  [routerLink]="'/merchant/productTemplate/addOrUpdate/' + productTemplate.id" >
+    <div class="cercle-pencil" *ngIf="connexionService.getLocalConnectedRole()===UserRole.MERCHANT"  [routerLink]="'/merchant/productTemplate/addOrUpdate/' + productTemplate.id" >
       <i class="fas fa-pencil-alt" ></i>
     </div>
 
