--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-view/product-template-view.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-view/product-template-view.component.scss
@@ -28,6 +28,14 @@ a {
   height: 40px;
   background-color: var(--couleurVerte);
   border-radius: 50%;
+  cursor: pointer;
+}
+
+.fa-bookmark {
+  font-size: 1.2em;
+  margin-left: 50%;
+  margin-top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .cercle-bookmark:hover ,fa-bookmark {
@@ -36,17 +44,32 @@ a {
 
 }
 
-.bloc-affichage-produit {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  display: flex;
+.cercle-pencil {
+  width: 40px;
+  height: 40px;
+  background-color: var(--couleurVerte);
+  border-radius: 50%;
+  margin-left: 7px;
+  cursor: pointer;
 }
 
-.fa-bookmark {
+.cercle-pencil:hover ,fa-pencil-alt {
+  color: var(--couleurVerte);
+  background-color: var(--couleurNoir);
+
+}
+
+.fa-pencil-alt {
   font-size: 1.2em;
   margin-left: 50%;
   margin-top: 50%;
   transform: translate(-50%, -50%);
+}
+
+.bloc-affichage-produit {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  display: flex;
 }
 
 .img-affichage {
@@ -133,7 +156,7 @@ figure:hover figcaption {
 
 .bloc-prix-affichage {
   display: flex;
-  padding-top: 50px;
+  padding-top: 30px;
   padding-bottom: 50px;
   background-color: var(--couleurGrisClair);
 }
@@ -281,7 +304,7 @@ input[type="checkbox"]:checked {
 
 .bloc-prix-barre {
   min-width: 67px;
-  margin-right: 55px;
+  margin-right: 70px;
   margin-top: -20px;
   right: 0px;
   top: 0px;
@@ -311,6 +334,7 @@ input[type="checkbox"]:checked {
   margin-left: 50%;
   transform: translate(-50%);
 }
+
 
 .bloc-pagination {
   width: 100%;
@@ -384,7 +408,7 @@ input[type="checkbox"]:checked {
 
 .bloc-composition-produit {
   background-color: var(--couleurGrisClair);
-  margin-top: 40px;
+  margin-top: 110px;
   padding-bottom: 50px;
 }
 
@@ -408,7 +432,7 @@ h5 {
 
 .titre-detail {
   font-family: 'roboto', sans-serif;
-  font-size: 1.2em;
+  font-size: 1.3em;
   font-weight: 600;
   text-align: center;
   color: var(--couleurNoir);
