--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/commerce-merchant-view/commerce-merchant-view.component.html
@@ -5,8 +5,8 @@
 <div class="row">
   <div class="bloc-ouverture-commerce col-12 no-gutters" id="il-faut-aller-ici-commerces">
 
-    <div class="cercle-bookmark" [routerLink]="'/merchant/commerce/addOrUpdate/' + commerce.id" >
-      <i class="fas fa-pencil-alt" ></i>
+    <div class="cercle-bookmark"  >
+
     </div>
 
     <div class="bloc-vitrine col-6 no-gutters">
@@ -16,7 +16,7 @@
     <div class="detail-commerce col-6">
 
       <div class="bloc-information-commerce col-12">
-        <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a></h2>
+        <h2 class="nom-commerce">/ <a [routerLink]="'/commerceSheet/' + commerce.id">{{commerce.name}} - {{commerce.uniqueIdName}}</a> <i class="fas fa-pencil-alt" [routerLink]="'/merchant/commerce/addOrUpdate/' + commerce.id" ></i></h2>
         <p class="rue-commerce"><!-- {{commerce.address.address}}, {{commerce.address.cityName}} --></p>
 
         <div class="bloc-ouverture ">
