--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.scss
@@ -15,7 +15,10 @@
 }
 
 .texte-recomandation {
-  font-size: 1.2em;
+  font-family: 'roboto', sans-serif;
+  font-size: 1.4em;
+  font-weight: 400;
+  font-size: 1em;
   font-style: italic;
   text-align: center;
   margin-bottom: 40px;
