-avancement dans les add et update des comermce et productTemplate. notamment au niveau du preremmplissage. -ajoute une memoire sur les derniers commerce et producteTemplate , pour eviter de prendre trop de temps a chercher les données dans la bdd pour l'edition. mais il a un check de l'id, et il y a la possiblité de chercher quand meme vers la bdd au cas ou rechargement de page. -correction pour les cas où un commerce n'a pas de schedulerWeek , ce qui normalement ne devrait pas arriver , mais bon.

--- a/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_common/product-template-common-view/product-template-common-view.component.html
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="bloc-quantite-produit col-6">
-          <input id="quantite-produit" class="quantite-produit" type="text" name="quantite" placeholder="1" >
+          <input class="quantite-produit" type="text" name="quantite" placeholder="1" >
           <div class="plus-moins">
             <i class="fas fa-plus-circle"></i>
             <i class="fas fa-minus-circle"></i>
