--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-commerce/add-commerce.component.scss
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/add-commerce/add-commerce.component.scss
@@ -4,6 +4,11 @@
 
 /* SECTION -> Bloc Détails Commerce */
 
+.hidden {
+  display: none;
+}
+
+
 .bloc-ouverture-commerce {
   margin-top: 70px;
   background-color: var(--couleurBlancCreme);
