--- a/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.html
+++ b/angularProject/nogashiFront/src/app/components/pages/pages_merchant/product-template-list-merchant/product-template-list-merchant.component.html
@@ -28,126 +28,126 @@
     <div class="row">
       <div class="bloc-trie col-2">
         <form class="formulaire-inscription" action="" method="get">
-          <label for="" class="label-formulaire"> Trier par :</label>
-          <select id="liste-deroulante" class="liste-deroulante">
+          <label class="label-formulaire"> Trier par :</label>
+          <select class="liste-deroulante">
             <option>Prix</option>
             <option>Distance +</option>
             <option>Distance -</option>
           </select>
 
-          <label for="" class="label-formulaire"> Commerces :</label>
-          <select id="liste-deroulante" class="liste-deroulante">
+          <label class="label-formulaire"> Commerces :</label>
+          <select class="liste-deroulante">
             <option>Lille</option>
             <option>Amiens</option>
             <option>Douai</option>
           </select>
           <div class="bloc-checkbox">
             <input  id="checkbox" class="checkbox" type="checkbox">
-            <label class="label-checkbox" for="scales">Tous</label>
+            <label class="label-checkbox" >Tous</label>
           </div>
 
           <p class="titre-avancee col-12">Recherche Avancée <i class="fas fa-angle-down"></i></p>
           <div class="bloc-filtre-regime">
             <p class="titre-filtre-regime">Régimes Alimentaires</p>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Végétarien</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Végétarien</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Végétalien</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Végétalien</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Vegan</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Vegan</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Sans-gluten</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Sans-gluten</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Sportif</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Sportif</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Méditerranéen</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Méditerranéen</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Détox</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Détox</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Anti-cholestérol</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Anti-cholestérol</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Anti-diabéte</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Anti-diabéte</label>
             </div>
             <div class="bloc-checkbox-regime">
-              <input  id="checkbox-regime" class="checkbox-regime" type="checkbox">
-              <label class="label-regime" for="scales">Sans sel</label>
+              <input   class="checkbox-regime" type="checkbox">
+              <label class="label-regime" >Sans sel</label>
             </div>
           </div>
 
           <div class="bloc-filtre-allergene">
             <p class="titre-filtre-allergene">Allergénes</p>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Gluten</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Gluten</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Crustacés</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Crustacés</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-regime" for="scales">Oeufs</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-regime" >Oeufs</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Poissons</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Poissons</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Arachides</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Arachides</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Soja</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Soja</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Lait</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Lait</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Fruits à coques</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Fruits à coques</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Céleri</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Céleri</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Moutarde</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Moutarde</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Sésame</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Sésame</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Sulfites</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Sulfites</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Lupin</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Lupin</label>
             </div>
             <div class="bloc-checkbox-allergene">
-              <input  id="checkbox-allergene" class="checkbox-allergene" type="checkbox">
-              <label class="label-allergene" for="scales">Mollusques</label>
+              <input   class="checkbox-allergene" type="checkbox">
+              <label class="label-allergene" >Mollusques</label>
             </div>
           </div>
         </form>
